# skincancerdetection

./: LICENSE  Makefile  README.md  data.dvc  mlflow.db  pyproject.toml
notebooks/: EDA.ipynb
skincancerdetection/: __init__.py  dataset.py  features.py  plots.py
skincancerdetection/modeling/: predict.py  train.py
src/: build_features.py  data_loading.py  evaluation.py  feature_engineering.py  params.yaml  training.py  training_pipeline.py
