[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "skincancerdetection"
version = "0.0.1"
description = "A currently active Kaggle competition to detect skin cancer among skin lesions from cropped 3D total body parts photographs. The aim is to create a full stack deep learning web-application project using various MLOps tech stack."
authors = [
  { name = "SaitejaKalam" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["skincancerdetection"]
force_sort_within_sections = true
